--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class="container mx-auto mt-10 md:flex gap-10 ">
         <div id="left" class="flex flex-1 flex-col">
             <h2 class="font-extrabold text-3xl mb-3 text-center">Patient Monitoring</h2>
-            <p class="text-center text-lg">Add patient and <span class="text-cyan-600 font-bold">Monitoring them</span></p>
-            <form id="appointment-form" class="flex flex-col bg-white mt-10 rounded-lg shadow-md px-5 py-10  mb-10">
+            <p class="text-center text-lg  mb-10 ">Add patient and <span class="text-cyan-600 font-bold">Monitoring them</span></p>
+            <form id="appointment-form" class="flex flex-col bg-white rounded-lg shadow-md px-5 py-10  mb-10">
                 <label class="uppercase font-bold text-sm mb-2 text-gray-500" for="pet">Pet Name:</label>
                 <input id="pet" class=" border border-gray-200 rounded-md p-2 mb-3" type="text" name="pet"  placeholder="Pet Name">
                 <label class="uppercase font-bold text-sm mb-2 text-gray-500" for="owner">Owner Name:</label>
                 <input id="owner" class=" border border-gray-200 rounded-md p-2 mb-3" type="text" name="owner"  placeholder="owner Name">
                 <label  class="uppercase font-bold text-sm mb-2 text-gray-500" for="email">Email Contact:</label>
-                <input id="email" class=" border border-gray-200 rounded-md p-2 mb-3" type="text" name="email"  placeholder="E-mail Contact">
+                <input id="email" class=" border border-gray-200 rounded-md p-2 mb-3" type="email" name="email"  placeholder="E-mail Contact">
                 <label class="uppercase font-bold text-sm mb-2 text-gray-500" for="date">Discharge Date:</label>
                 <input id="date" class=" border border-gray-200 rounded-md p-2 mb-3" type="date" name="date" >
                 <label class="uppercase font-bold text-sm mb-2 text-gray-500" for="symptoms">Symptoms:</label>
@@ -29,10 +29,11 @@
         <div id="right" class="flex flex-1 flex-col">
             <h2 class="font-extrabold text-3xl mb-3 text-center">Patient List</h2>
             <p class="text-center text-lg" >Manage your Patients and <span class="text-cyan-600 font-bold">Appointments</span></p>
-            <div id="appointment-list" class="lex flex-col bg-white mt-10 rounded-lg shadow-md px-5 py-10  mb-10">
-                <p class="text-center">There are no patients</p>
+            <div id="appointment-list" class="lex flex-col mt-10 rounded-lg ">
+               <p class="text-center">There are no patients</p>
             </div>
         </div>
     </div>
 </body>
+<script src="./js/index.js"></script>
 </html>
