refactor: reuse Tailwind CSS styles with @apply

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
             <h2 class="font-extrabold text-3xl mb-3 text-center">Patient Monitoring</h2>
             <p class="text-center text-lg  mb-10 ">Add patient and <span class="text-cyan-600 font-bold">Monitoring them</span></p>
             <form id="appointment-form" class="flex flex-col bg-white rounded-lg shadow-md px-5 py-10  mb-10">
-                <label class="uppercase font-bold text-sm mb-2 text-gray-500" for="pet">Pet Name:</label>
-                <input id="pet" class=" border border-gray-200 rounded-md p-2 mb-3" type="text" name="pet"  placeholder="Pet Name">
-                <label class="uppercase font-bold text-sm mb-2 text-gray-500" for="owner">Owner Name:</label>
-                <input id="owner" class=" border border-gray-200 rounded-md p-2 mb-3" type="text" name="owner"  placeholder="owner Name">
-                <label  class="uppercase font-bold text-sm mb-2 text-gray-500" for="email">Email Contact:</label>
-                <input id="email" class=" border border-gray-200 rounded-md p-2 mb-3" type="email" name="email"  placeholder="E-mail Contact">
-                <label class="uppercase font-bold text-sm mb-2 text-gray-500" for="date">Discharge Date:</label>
-                <input id="date" class=" border border-gray-200 rounded-md p-2 mb-3" type="date" name="date" >
-                <label class="uppercase font-bold text-sm mb-2 text-gray-500" for="symptoms">Symptoms:</label>
-                <textarea id="symptoms" class=" border border-gray-200 rounded-md p-2 mb-3" name="symptoms"  placeholder="Patients Symptoms"></textarea>
+                <label class="label-form" for="pet">Pet Name:</label>
+                <input id="pet" class="input-form" type="text" name="pet"  placeholder="Pet Name">
+                <label class="label-form" for="owner">Owner Name:</label>
+                <input id="owner" class=" input-form" type="text" name="owner"  placeholder="owner Name">
+                <label  class="label-form" for="email">Email Contact:</label>
+                <input id="email" class="input-form" type="email" name="email"  placeholder="E-mail Contact">
+                <label class="label-form" for="date">Discharge Date:</label>
+                <input id="date" class=" input-form" type="date" name="date" >
+                <label class="label-form" for="symptoms">Symptoms:</label>
+                <textarea id="symptoms" class=" input-form" name="symptoms"  placeholder="Patients Symptoms"></textarea>
                 <input id="appointment-submit" class="w-full bg-cyan-600 p-2 text-white uppercase text-sm font-bold" type="submit" value="Register Patient">
             </form>
         </div>
